add scaffolding command

--- a/bin/scaffolds/rme_mapper.latte
+++ b/bin/scaffolds/rme_mapper.latte
@@ -1,11 +1,9 @@
-<?php
-
 namespace App\Models\Rme;
 
 use App\Models\Orm\Mapper;
 
 
-class EventsMapper extends Mapper
+class {$class} extends Mapper
 {
 
 }
