--- a/bin/scaffolds/rme_repository.latte
+++ b/bin/scaffolds/rme_repository.latte
@@ -1,11 +1,9 @@
-<?php
-
 namespace App\Models\Rme;
 
 use App\Models\Orm\Repository;
 
 
-class EventsRepository extends Repository
+class {$class} extends Repository
 {
 
 }
