add migration scaffolding

--- a/bin/scaffolds/migration_php.latte
+++ b/bin/scaffolds/migration_php.latte
@@ -1,9 +1,7 @@
-<?php
-
 namespace App\Migrations;
 
 
-class Migration2 extends Migration
+class {$class} extends Migration
 {
 
 	public function run()
