--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -30,7 +30,10 @@
 	<![endif]-->
 </head>
 <body>
-	<div n:foreach="$flashes as $flash" class="flash {$flash->type}">{$flash->message}</div>
+	<div n:foreach="$flashes as $flash" class="alert alert-{$flash->type}">
+		<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+		<strong>{$flash->headline}</strong> {$flash->message}
+	</div>
 
 	{include content}
 
