fix rme scaffolding

--- a/bin/scaffolds/rme_entity.latte
+++ b/bin/scaffolds/rme_entity.latte
@@ -5,7 +5,7 @@ use App\Models\Orm\Entity;
 
 /**
 {foreach $properties as $property => $type}
- * @property {$type} {$property}
+ * @property {$type} ${$property}
 {/foreach}
  */
 class {$class} extends Entity
