improve cool placeholders

--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -45,6 +45,7 @@
 	<script src="//leaflet.cloudmade.com/dist/leaflet.js"></script>
 	<script>window.L || document.write('<script src="{$basePath|noescape}/libs/leaflet/leaflet.js"><\/script>')</script>
 
+	<script defer src="{$basePath}/libs/JVFloat/jvfloat.min.js"></script>
 	<script defer src="{$basePath}/libs/leaflet-providers/leaflet-providers.js"></script>
 	<script defer src="{$basePath}/build/app.js"></script>
 </body>
