--- a/app/templates/controls/forms/registration.latte
+++ b/app/templates/controls/forms/registration.latte
@@ -14,10 +14,12 @@
 		<li n:foreach="$form->ownErrors as $error">{$error}</li>
 	</ul>
 	<div class="form-group{if $form['email']->errors} has-error{/if}">
+		<label class="control-label" n:name="email">Emailová adresa</label>
 		<input type="email" class="form-control" n:name="email" placeholder="Emailová adresa">
 		{include error, control => $form['email']}
 	</div>
 	<div class="form-group{if $form['password']->errors} has-error{/if}">
+        <label class="control-label" n:name="password">Heslo</label>
         <input type="password" class="form-control" n:name="password" placeholder="Heslo">
         {include error, control => $form['password']}
     </div>
