--- a/app/templates/Homepage/default.latte
+++ b/app/templates/Homepage/default.latte
@@ -1,6 +1,6 @@
 {block content}
 	test
 
-	{control map, $venue->getLatLng(), 13}
+	{control map, $marathon->venue->getLatLng(), 13}
 
 	{control registrationForm}
