--- a/app/templates/controls/forms/registration.latte
+++ b/app/templates/controls/forms/registration.latte
@@ -18,11 +18,11 @@
 		<input type="email" class="form-control" n:name="email" placeholder="Emailová adresa">
 		{include error, control => $form['email']}
 	</div>
-	<div class="form-group{if $form['password']->errors} has-error{/if}">
-        <label class="control-label" n:name="password">Heslo</label>
-        <input type="password" class="form-control" n:name="password" placeholder="Heslo">
-        {include error, control => $form['password']}
+	<div class="form-group{if $form['name']->errors} has-error{/if}">
+        <label class="control-label" n:name="name">Jméno</label>
+        <input type="text" class="form-control" n:name="name" placeholder="Jméno na certifikát">
+        {include error, control => $form['name']}
     </div>
 
-	<button n:name="save" class="btn btn-primary">Submit</button>
+	<button n:name="save" class="btn btn-primary">Registrovat se</button>
 {/form}
