nextras => porm part 1

--- a/app/templates/views/Homepage/default.latte
+++ b/app/templates/views/Homepage/default.latte
@@ -1,8 +1,2 @@
 {block content}
-	test
-
-	<h1>{$marathon->name}</h1>
-	<h2>{$marathon->heldAt|date:'j. n. Y'}</h2>
-	{control map, $marathon->venue->getLatLng(), 13}
-
-	{control registrationForm}
+	<h1>Homepage:default</h1>
