--- a/app/templates/views/Error/403.latte
+++ b/app/templates/views/Error/403.latte
@@ -1,4 +1,7 @@
 {block content}
+	{**
+	 * @param UserEntity $userEntity
+	 *}
 	<h1 n:block=title>Access Denied</h1>
 
 	<p>You do not have permission to view this page. Please try contact the web
