--- a/app/templates/views/Error/404.latte
+++ b/app/templates/views/Error/404.latte
@@ -1,4 +1,7 @@
 {block content}
+	{**
+	 * @param UserEntity $userEntity
+	 *}
 	<h1 n:block=title>Page Not Found</h1>
 
 	<p>The page you requested could not be found. It is possible that the address is
