--- a/app/templates/views/Error/4xx.latte
+++ b/app/templates/views/Error/4xx.latte
@@ -1,4 +1,7 @@
 {block content}
+	{**
+	 * @param UserEntity $userEntity
+	 *}
 	<h1 n:block=title>Oops...</h1>
 
 	<p>Your browser sent a request that this server could not understand or process.</p>
